--- a/src/app/features/customer/shared/customerform/customerform.component.html
+++ b/src/app/features/customer/shared/customerform/customerform.component.html
@@ -2,101 +2,105 @@
   <!-- breadcrumb -->
   <ganapati-breadcrumb></ganapati-breadcrumb>
   <section id="customer-card" fxLayout="row wrap" fxLayoutAlign="center center">
-    <mat-card fxFlex="500px" fxFlex.xs="100%" class="mt-4 mb-4">
-      <mat-card-title class="text-center">Add Customer</mat-card-title>
-      <mat-divider></mat-divider>
-      <form
-        [formGroup]="customerForm"
-        autocomplete="off"
-        novalidate
-        fxLayout="column wrap"
-        fxLayoutAlign="center center"
-        fxLayoutGap="10px"
-      >
-        <mat-card-content class="mt-4">
-          <div class="row">
-            <div class="col-md-6 col-sm-6 mx-auto">
-              <mat-form-field class="example-full-width">
-                <input
-                  matInput
-                  type="text"
-                  placeholder="First name"
-                  formControlName="fname"
-                  id="fname"
-                />
-                <mat-hint align="end">Enter customer's first name</mat-hint>
-                <mat-error *ngIf="customerForm.controls['fname'].invalid">{{
-                  getFirstNameErrorMessage()
-                }}</mat-error>
-              </mat-form-field>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-6 col-sm-6 mx-auto">
-              <mat-form-field class="example-full-width">
-                <input
-                  matInput
-                  type="text"
-                  placeholder="Last name"
-                  formControlName="lname"
-                  id="lname"
-                  fxlayoutalign="column"
-                />
-                <mat-hint align="end">Enter customer's last name</mat-hint>
-                <mat-error *ngIf="customerForm.controls['lname'].invalid">{{
-                  getLastNameErrorMessage()
-                }}</mat-error>
-              </mat-form-field>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 col-sm-6 mx-auto">
-              <mat-form-field class="example-full-width">
-                <input
-                  matInput
-                  type="text"
-                  placeholder="Address"
-                  formControlName="address"
-                />
-                <mat-hint align="end">Enter customer's address</mat-hint>
-                <mat-error *ngIf="customerForm.controls['address'].invalid">{{
-                  getAddressErrorMessage()
-                }}</mat-error>
-              </mat-form-field>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 col-sm-6 mx-auto">
-              <mat-form-field class="example-full-width" align="center">
-                <input
-                  matInput
-                  type="number"
-                  placeholder="Mobile number"
-                  formControlName="mobile"
-                />
-                <mat-hint align="end">Enter customer's mobile number</mat-hint>
-                <mat-error *ngIf="customerForm.controls['mobile'].invalid">{{
-                  getMobileErrorMessage()
-                }}</mat-error>
-              </mat-form-field>
-            </div>
-          </div>
-        </mat-card-content>
+    <div id="customerForm-card">
+      <mat-card class="mt-4 mb-4" style="width: 40rem;">
+        <mat-card-title class="text-center">Add Customer</mat-card-title>
         <mat-divider></mat-divider>
-        <!-- save/cancel -->
-        <div class="row">
-          <div class="col-md-9 col-sm-6">
-            <mat-card-actions align="center">
-              <ganapati-save-cancel-buttons
-                (save)="onSave()"
-                (cancel)="onCancel()"
-              >
-              </ganapati-save-cancel-buttons>
-            </mat-card-actions>
+        <form
+          [formGroup]="customerForm"
+          autocomplete="off"
+          novalidate
+          fxLayout="column wrap"
+          fxLayoutAlign="center center"
+          fxLayoutGap="10px"
+        >
+          <mat-card-content class="mt-4">
+            <div class="row">
+              <div class="col-md-6 col-sm-6 mx-auto">
+                <mat-form-field class="example-full-width">
+                  <input
+                    matInput
+                    type="text"
+                    placeholder="First name"
+                    formControlName="fname"
+                    id="fname"
+                  />
+                  <mat-hint align="end">Enter customer's first name</mat-hint>
+                  <mat-error *ngIf="customerForm.controls['fname'].invalid">{{
+                    getFirstNameErrorMessage()
+                  }}</mat-error>
+                </mat-form-field>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6 col-sm-6 mx-auto">
+                <mat-form-field class="example-full-width">
+                  <input
+                    matInput
+                    type="text"
+                    placeholder="Last name"
+                    formControlName="lname"
+                    id="lname"
+                    fxlayoutalign="column"
+                  />
+                  <mat-hint align="end">Enter customer's last name</mat-hint>
+                  <mat-error *ngIf="customerForm.controls['lname'].invalid">{{
+                    getLastNameErrorMessage()
+                  }}</mat-error>
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6 col-sm-6 mx-auto">
+                <mat-form-field class="example-full-width">
+                  <input
+                    matInput
+                    type="text"
+                    placeholder="Address"
+                    formControlName="address"
+                  />
+                  <mat-hint align="end">Enter customer's address</mat-hint>
+                  <mat-error *ngIf="customerForm.controls['address'].invalid">{{
+                    getAddressErrorMessage()
+                  }}</mat-error>
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6 col-sm-6 mx-auto">
+                <mat-form-field class="example-full-width" align="center">
+                  <input
+                    matInput
+                    type="number"
+                    placeholder="Mobile number"
+                    formControlName="mobile"
+                  />
+                  <mat-hint align="end"
+                    >Enter customer's mobile number</mat-hint
+                  >
+                  <mat-error *ngIf="customerForm.controls['mobile'].invalid">{{
+                    getMobileErrorMessage()
+                  }}</mat-error>
+                </mat-form-field>
+              </div>
+            </div>
+          </mat-card-content>
+          <mat-divider></mat-divider>
+          <!-- save/cancel -->
+          <div class="row">
+            <div class="col-md-9 col-sm-6">
+              <mat-card-actions align="center">
+                <ganapati-save-cancel-buttons
+                  (save)="onSave()"
+                  (cancel)="onCancel()"
+                >
+                </ganapati-save-cancel-buttons>
+              </mat-card-actions>
+            </div>
           </div>
-        </div>
-      </form>
-    </mat-card>
+        </form>
+      </mat-card>
+    </div>
   </section>
 </div>
