--- a/src/app/features/mortgage/shared/mortgage-form/mortgage-form.component.html
+++ b/src/app/features/mortgage/shared/mortgage-form/mortgage-form.component.html
@@ -2,9 +2,9 @@
 <div class="content-wrapper">
   <!-- breadcrumb -->
   <ganapati-breadcrumb></ganapati-breadcrumb>
-  <div id="mortgageForm-card">
-    <section fxLayout="row wrap" fxLayoutAlign="center center">
-      <mat-card fxFlex="500px" fxFlex.xs="100%" class="mt-4">
+  <section fxLayout="row wrap" fxLayoutAlign="center center">
+    <div id="mortgageForm-card">
+      <mat-card class="mt-4" style="width: 40rem;">
         <mat-card-title align="center">Add mortgage </mat-card-title
         ><mat-card-subtitle *ngFor="let customer of customers" align="center"
           >Customer:
@@ -27,7 +27,7 @@
           <mat-card-content>
             <!-- quantity -->
             <div class="row">
-              <div class="col-md-6 col-sm-6 mx-auto mt-4 " >
+              <div class="col-md-6 col-sm-6 mx-auto mt-4">
                 <mat-form-field class="example-full-width">
                   <input
                     matInput
@@ -165,6 +165,6 @@
           </div>
         </form>
       </mat-card>
-    </section>
-  </div>
+    </div>
+  </section>
 </div>
